# austin_langchain

./: .gitignore  08-30-2023-meetup-planning.md  Austin_LangChain_Perpexity_Clone.ipynb  LC_102_LangServe_pirate_speak.ipynb  QA_Using_Retriever.ipynb  README.md
.devcontainer/: devcontainer.json
ai-stacks/docs/: open-webui-pipelines-implementation-guide.md  pipeline-lifecycle-methods.md
ai-stacks/open-webui-pipelines/: .context.md  README.md  deploy_pipelines_server.sh  requirements.txt
bots/discord/: .env.example  .gitignore  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.bot.yml  docker-compose.dev.yml  generate_newsletter.py  pyproject.toml  run_bot.py
bots/discord/alembic/: env.py
bots/discord/alembic/versions/: 924530e008e4_initial_migration_with_timezone_support.py
bots/discord/docs/: MAKEFILE_USAGE.md  NEWSLETTER_GENERATION.md
bots/discord/output/: README.md
bots/discord/scripts/: README.md  calculate_engagement.py  dev-setup.sh  display_newsletter.py  generate_biweekly.py  newsletter_with_fetch.py  preview_newsletter.py  publish_biweekly.py  publish_newsletter_draft_only.py  publish_newsletter_to_buttondown.py  recalculate_engagement.py  save_newsletter.py  show_top_messages.py  sync_messages.py  verify_schedules.py
bots/discord/src/discord_bot/: __init__.py  cli.py  main.py
bots/discord/src/discord_bot/agents/: __init__.py  base_agent.py  content_analyst.py  content_enrichment_agent.py  discussion_writer.py  editor_agent.py  formatter_agent.py  newsletter_workflow.py  opinion_writer.py  research_agent.py  state.py
bots/discord/src/discord_bot/core/: __init__.py  config.py  logging.py
bots/discord/src/discord_bot/models/: __init__.py  base.py  discord_models.py  newsletter_models.py
bots/discord/src/discord_bot/services/: __init__.py  buttondown_service.py  database.py  discord_service.py  engagement_service.py  model_router.py  newsletter_service.py  perplexity_service.py  scheduler_service.py
bots/discord/src/discord_bot/utils/: __init__.py  discord_links.py  text_processing.py
bots/discord/tests/: README.md  __init__.py  conftest.py  test_all_channels.py  test_api_integrations.py  test_basic_permissions.py  test_bot_quick.py  test_branding.py  test_database.py  test_discord_links.py  test_discord_permissions.py  test_discussion_writer.py  test_engagement.py  test_fetch_history.py  test_message_access.py  test_newsletter_integration.py  test_newsletter_workflow.py  test_workflow.py
competitions/trello_mcp/: .gitignore  README.md
labs/: streamlit_document_search.ipynb
labs/LangChain_101/: 101-1-streamlit_streaming.ipynb  101-2-streamlit_document_search.ipynb  101-3-search-chat.ipynb  101-4-streamlit_introduction.ipynb  Streamlit-Streaming.ipynb  streamlit_document_search.ipynb  streamlit_streaming.ipynb
labs/LangChain_102/: Google_colab_and_langsmith_base_template.ipynb  LC_102-LangServe-pirate-speak.ipynb  readme.md
labs/LangChain_103/: 103-1-docker_introduction.md  103-2-langserve_on_docker.md  103-4-pandas_df_agent_langchain.ipynb  ALC_Turbocharge_your_RAG_quickstart.ipynb  readme.md  sample.env  sample.vars.env  streamlit_app.py
labs/LangChain_104/: 104-langgraph-rag-agent.ipynb
labs/LangChain_105/: 105-langgraph_code_assistant.ipynb  105-streamlit_ollama_llava_auto1111.ipynb
labs/LangChain_106/: langchain_runnablepassthrough.ipynb
labs/LangChain_107/: bark_demo.ipynb
mcps/langgraph_mcp/: README.md  README_FASTMCP.md  pyproject.toml
mcps/langgraph_mcp/src/: __init__.py  server.py  settings.py
meetings/: meeting-notes-template.md
(+176 files in other folders)
